--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -110,7 +110,7 @@
               <li class='list-group-item' id='parent_{{ randomId }}'>
                 <div class='d-flex align-items-center'>
                   <i class='fas fa-link mr-1'></i>
-                  <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span> <a href='experiments.php?mode=view&id={{ link.itemid }}' class='mr-auto'>
+                  <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span> <a href='experiments.php?mode=view&amp;id={{ link.itemid }}' class='mr-auto'>
                   {{ link.title|raw }}</a>
                   {# toggle body #}
                   <button type='button' data-type='experiments' data-id='{{ link.itemid }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2'>
@@ -167,7 +167,7 @@
             <li class='list-group-item' id='parent_{{ randomId }}'>
               <div class='d-flex align-items-center'>
                 <i class='fas fa-link mr-1'></i>
-                <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span> <a href='database.php?mode=view&id={{ link.itemid }}' class='mr-auto'>
+                <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span> <a href='database.php?mode=view&amp;id={{ link.itemid }}' class='mr-auto'>
                 {{ link.title|raw }}</a>
                 {# toggle body #}
                 <button type='button' data-type='items' data-id='{{ link.itemid }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2'>
