--- a/src/templates/show-item-table.html
+++ b/src/templates/show-item-table.html
@@ -12,7 +12,7 @@
   <td class='title'>
     {# edit icon #}
     {% if not item.locked and (item.userid == App.Users.userData.userid or Entity.type == 'items' or App.Users.isAdmin) %}
-      <a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2' title='{{ 'Edit'|trans }}' aria-label='{{ 'Edit'|trans }}'>
+      <a href='{{ Entity.page }}.php?mode=edit&amp;id={{ item.id }}' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2' title='{{ 'Edit'|trans }}' aria-label='{{ 'Edit'|trans }}'>
         <i class='fas fa-fw fa-pencil-alt'></i>
       </a>
     {% endif %}
@@ -26,7 +26,7 @@
     {% endif %}
     {# toggle body #}
     <button class='btn p-2 hl-hover-gray lh-normal border-0 my-n2' data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-toggle-plus-icon='1' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}' aria-label='{{ 'Toggle content'|trans }}'><i class='fas fa-square-plus fa-fw link-like'></i></button>
-    <a href='{{ Entity.page }}.php?mode=view&id={{ item.id }}'>{{ item.title|raw }}</a>
+    <a href='{{ Entity.page }}.php?mode=view&amp;id={{ item.id }}'>{{ item.title|raw }}</a>
   </td>
 
   {# NEXT STEP #}
@@ -63,7 +63,7 @@
     {% if itemtagsArr|length > 0 %}
       <span class='d-flex flex-wrap'>
         {% for tag in itemtagsArr %}
-          <a class='tag margin-1px {{ tag.is_favorite ? 'favorite' }}' href='{{ Entity.page }}.php?mode=show&tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
+          <a class='tag margin-1px {{ tag.is_favorite ? 'favorite' }}' href='{{ Entity.page }}.php?mode=show&amp;tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
         {% endfor %}
       </span>
   {% endif %}
