--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -12,13 +12,13 @@
 
   {% if mode == 'edit' %}
     {# VIEW #}
-    <a class='btn hl-hover-gray p-2 main-action-button mr-2 lh-normal border-0' title='{{ 'View mode'|trans }}' href='?tab=3&mode=view&templateid={{ Entity.id }}'>
+    <a class='btn hl-hover-gray p-2 main-action-button mr-2 lh-normal border-0' title='{{ 'View mode'|trans }}' href='?tab=3&amp;mode=view&amp;templateid={{ Entity.id }}'>
       <i class='fas fa-eye fa-fw'></i>
     </a>
   {% else %}
     {% if App.Request.getScriptName|split('/')|last == 'ucp.php' %}
       {# EDIT #}
-      <a class='btn hl-hover-gray p-2 main-action-button mr-2 lh-normal border-0' title='{{ 'Edit'|trans }}' href='?tab=3&mode=edit&templateid={{ Entity.id }}'>
+      <a class='btn hl-hover-gray p-2 main-action-button mr-2 lh-normal border-0' title='{{ 'Edit'|trans }}' href='?tab=3&amp;mode=edit&amp;templateid={{ Entity.id }}'>
         <i class='fas fa-pencil fa-fw'></i>
       </a>
     {% endif %}
@@ -78,9 +78,9 @@
           <button class='dropdown-item' type='button' id='iHazEditor' data-action='switch-editor' data-editor='{{ editor }}'><i class='fas fa-pencil-alt fa-fw'></i> {{ 'Switch editor'|trans }}</button>
         {% endif %}
         {# REVISIONS #}
-        <a class='dropdown-item' href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ 'See revisions'|trans }}</a>
+        <a class='dropdown-item' href='revisions.php?type={{ Entity.type }}&amp;item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ 'See revisions'|trans }}</a>
         {# CHANGELOG #}
-        <a class='dropdown-item' href='?templateid={{ Entity.id }}&mode=changelog&tab=3'><i class='fas fa-list fa-fw'></i> {{ 'See changelog'|trans }}</a>
+        <a class='dropdown-item' href='?templateid={{ Entity.id }}&amp;mode=changelog&amp;tab=3'><i class='fas fa-list fa-fw'></i> {{ 'See changelog'|trans }}</a>
         {# TRANSFER OWNERSHIP #}
         {% if Entity.entityData.userid == App.Users.userData.userid or App.Users.isAdmin %}
           <button type='button' class='dropdown-item' data-action='toggle-modal' data-target='ownerModal'><i class='fas fa-people-arrows fa-fw' title='{{ 'Manage Permissions'|trans }}'></i> {{ 'Transfer ownership'|trans }}</button>
