--- a/src/templates/favtags-panel.html
+++ b/src/templates/favtags-panel.html
@@ -24,9 +24,9 @@
     <hr>
     {# ADD TAG AS FAVORITE INPUT #}
     <div class='input-group mt-2 mb-3'>
-      <input id='createFavTagInput' data-autocomplete='tags' type='text' class='form-control form-inline createTagInputFavorite' aria-label='{{ 'Add a tag as favorite'|trans }}' placeholder='{{ 'Add a tag as favorite'|trans }}'>
+      <input id='createFavTagInput' data-autocomplete='tags' type='text' class='form-control form-inline' aria-label='{{ 'Add a tag as favorite'|trans }}' placeholder='{{ 'Add a tag as favorite'|trans }}'>
       <div class='input-group-append'>
-        {# this is a dummy button with no action, all work is done via event listeners on .createTagInputFavorite #}
+        {# this is a dummy button with no action, all work is done via event listeners on #createFavTagInput #}
         <button class='btn btn-primary' type='button' title='{{ 'Add'|trans }}' aria-label='{{ 'Add'|trans }}'>
           <i class='fas fa-plus fa-fw'></i>
         </button>
