--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -161,7 +161,7 @@
         <div class='input-group'>
           <select class='form-control' id='loadMetadataSelect_items_types'>
             {% for itemType in itemsCategoryArr %}
-              <option value='{{ itemType.id }}'>{{ itemType.title|raw }}</option>
+              <option value='{{ itemType.id }}'>{{ itemType.title }}</option>
             {% endfor %}
           </select>
           <div class='input-group-append'>
