--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -9,7 +9,7 @@
     <ul>
     {% for user in unvalidatedUsersArr %}
       <li>
-        {{ user.fullname|raw }} ({{ user.email }}) <button type='button' class='btn btn-primary' data-action='validate-user' data-userid='{{ user.userid }}'>{{ 'Validate'|trans }}</button> <button type='button' class='btn btn-danger' data-action='destroy-user' data-userid='{{ user.userid }}'>{{ 'Delete'|trans }}</button>
+        {{ user.fullname }} ({{ user.email }}) <button type='button' class='btn btn-primary' data-action='validate-user' data-userid='{{ user.userid }}'>{{ 'Validate'|trans }}</button> <button type='button' class='btn btn-danger' data-action='destroy-user' data-userid='{{ user.userid }}'>{{ 'Delete'|trans }}</button>
       </li>
     {% endfor %}
     </ul>
@@ -167,11 +167,11 @@
           <button class='btn teamGroupDelete float-right border-0 lh-normal m-0 p-0' data-id='{{ teamGroup.id }}' title='{{ 'Delete'|trans }}'>
             <i class='fas fa-trash-alt'></i>
           </button>
-          <h5><i class='fas fa-users'></i> <span data-id='{{ teamGroup.id }}' class='malleableTeamgroupName hl-hover'>{{ teamGroup.name|raw }}</span></h5>
+          <h5><i class='fas fa-users'></i> <span data-id='{{ teamGroup.id }}' class='malleableTeamgroupName hl-hover'>{{ teamGroup.name }}</span></h5>
           <hr>
           <div class='d-flex flex-wrap'>
             {% for user in teamGroup.users %}
-            <div class='user-badge rounded px-2 py-1 mr-2 mt-2'>{{ user.fullname|raw }} <span title='{{ 'Delete'|trans }}' class='clickable rmUserFromGroup m-1' data-user='{{ user.userid }}' data-group='{{ teamGroup.id }}'><i class='fas fa-xmark' style='color:#29AEB9' ></i></span></div>
+            <div class='user-badge rounded px-2 py-1 mr-2 mt-2'>{{ user.fullname }} <span title='{{ 'Delete'|trans }}' class='clickable rmUserFromGroup m-1' data-user='{{ user.userid }}' data-group='{{ teamGroup.id }}'><i class='fas fa-xmark' style='color:#29AEB9' ></i></span></div>
             {% endfor %}
           </div>
           {# ADD USER #}
@@ -220,7 +220,7 @@
 
             <li class='list-inline-item'>
               <label for='expcatName_{{ cat.id }}'>{{ 'Name'|trans }}</label>
-              <input class='form-control' required type='text' id='expcatName_{{ cat.id }}' value='{{ cat.title|raw }}' />
+              <input class='form-control' required type='text' id='expcatName_{{ cat.id }}' value='{{ cat.title }}' />
             </li>
 
             <li class='list-inline-item col-1 align-top'>
@@ -266,7 +266,7 @@
   {% else %}
       <ul class='list-group form-group sortable' data-axis='y' data-table='items_types'>
         {% for itemType in itemsCategoryArr %}
-        <li class='box' id='itemstypes_{{ itemType.id }}' style='color: #{{ itemType.color }}'><span class='sortableHandle draggable mr-2'><i class='fas fa-grip-vertical fa-fw'></i></span><a href='?tab=4&amp;templateid={{ itemType.id }}#itemsCategoriesAnchor' aria-label='{{ 'Edit'|trans }} {{ itemType.title|raw }}' title='{{ 'Edit'|trans }}' class='p-2 mr-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt'></i></a>{{ itemType.title|raw }}</li>
+        <li class='box' id='itemstypes_{{ itemType.id }}' style='color: #{{ itemType.color }}'><span class='sortableHandle draggable mr-2'><i class='fas fa-grip-vertical fa-fw'></i></span><a href='?tab=4&amp;templateid={{ itemType.id }}#itemsCategoriesAnchor' aria-label='{{ 'Edit'|trans }} {{ itemType.title|escape('html_attr') }}' title='{{ 'Edit'|trans }}' class='p-2 mr-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt'></i></a>{{ itemType.title }}</li>
         {% endfor %}
       </ul>
       <p>{{ 'Use the handles to adjust the order in which the categories appear in the application.'|trans }}</p>
@@ -280,7 +280,7 @@
       <ul class='list-inline'>
         <li class='list-inline-item'>
           <label for='itemsTypesName'>{{ 'Name'|trans }}</label>
-          <input type='text' class='form-control' id='itemsTypesName' value='{{ Entity.entityData.title|raw }}' />
+          <input type='text' class='form-control' id='itemsTypesName' value='{{ Entity.entityData.title }}' />
         </li>
 
         <li class='list-inline-item col-1 align-top'>
@@ -354,7 +354,7 @@
 
             <li class='list-inline-item'>
               <label for='statusName_{{ status.id }}'>{{ 'Name'|trans }}</label>
-              <input class='form-control' required type='text' id='statusName_{{ status.id }}' value='{{ status.title|raw }}' />
+              <input class='form-control' required type='text' id='statusName_{{ status.id }}' value='{{ status.title }}' />
             </li>
 
             <li class='list-inline-item col-1 align-top'>
@@ -401,7 +401,7 @@
 
             <li class='list-inline-item'>
               <label for='itemsstatusName_{{ status.id }}'>{{ 'Name'|trans }}</label>
-              <input class='form-control' required type='text' id='itemsstatusName_{{ status.id }}' value='{{ status.title|raw }}' />
+              <input class='form-control' required type='text' id='itemsstatusName_{{ status.id }}' value='{{ status.title }}' />
             </li>
 
             <li class='list-inline-item col-1 align-top'>
@@ -546,7 +546,7 @@
         <tbody>
           {% for tag in tagsArr %}
             <tr>
-              <th scope='row' class='border-right-0'><button type='button' class='btn tag editable hl-hover lh-normal border-0' data-id='{{ tag.id }}'>{{ tag.tag|raw }}</button></td>
+              <th scope='row' class='border-right-0'><button type='button' class='btn tag editable hl-hover lh-normal border-0' data-id='{{ tag.id }}'>{{ tag.tag }}</button></th>
               <td class='align-middle'>{{ tag.item_count }}</td>
               <td>
                 <a title='{{ 'Show tagged experiments'|trans }}' aria-label='{{ 'Show tagged experiments'|trans }}' href='experiments.php?mode=show&amp;tags%5B%5D={{ tag.tag|url_encode }}' class='btn hl-hover-gray lh-normal p-1 my-n1'>
