--- a/src/templates/create-new-item-modal.html
+++ b/src/templates/create-new-item-modal.html
@@ -29,9 +29,9 @@
         {% for category in createNewCategoryArr %}
           <a style='color:#{{ category.color }}; border: 1px #ccc solid;' class='btn btn-light mt-1' href='#' data-action='create-entity' data-type='{{ entityType }}' data-tplid='{{ category.id }}'>
           {% if category.category %}
-            <span class='catstat-btn category-btn mr-2' style='--bg: #{{ category.category_color|default('bdbdbd') }}'>{{ category.category_title|raw }}</span>
+            <span class='catstat-btn category-btn mr-2' style='--bg: #{{ category.category_color|default('bdbdbd') }}'>{{ category.category_title }}</span>
           {% endif %}
-          {{ category.title|raw }}</a>
+          {{ category.title }}</a>
         {% endfor %}
         {# show add button to admin, for items #}
         {% if entityType == 'items' and App.Users.isAdmin %}
