--- a/src/templates/edit-tags.html
+++ b/src/templates/edit-tags.html
@@ -5,7 +5,7 @@
     <div id='tags_div_currenttags_{{ Entity.id }}' class='d-flex flex-wrap'>
       {% set attachedTags = Entity.Tags.readAll() %}
       {% for tag in attachedTags %}
-        <button class='btn tag margin-1px hover-danger lh-normal border-0 {{- loop.last ? ' mr-2' }} {{- tag.is_favorite ? ' favorite' }}' type='button' data-action='unreference-tag' data-tagid='{{ tag.tag_id }}'>{{ tag.tag|raw }}</button>
+        <button class='btn tag margin-1px hover-danger lh-normal border-0 {{- loop.last ? ' mr-2' }} {{- tag.is_favorite ? ' favorite' }}' type='button' data-action='unreference-tag' data-tagid='{{ tag.tag_id }}'>{{ tag.tag }}</button>
       {%- endfor -%}
     </div>
     <input type='text' id='createTagInput' data-autocomplete='tags' class='createTagInput form-control' placeholder='{{ 'Add a tag'|trans }}' />
@@ -29,7 +29,7 @@
       {% endfor %}
 
       {% for tag in filteredTags|slice(0, 101) %}
-        <button class='btn tag margin-1px opacity-8 lh-normal border-0 {{- loop.last ? ' mr-2' }} {{- tag.is_favorite ? ' favorite' }}' data-action='add-suggested-tag' data-tagid='{{ tag.tag_id }}' type='button'>{{ tag.tag|raw }}</button>
+        <button class='btn tag margin-1px opacity-8 lh-normal border-0 {{- loop.last ? ' mr-2' }} {{- tag.is_favorite ? ' favorite' }}' data-action='add-suggested-tag' data-tagid='{{ tag.tag_id }}' type='button'>{{ tag.tag }}</button>
       {%- endfor -%}
     </div>
   </details>
