--- a/src/templates/revisions.html
+++ b/src/templates/revisions.html
@@ -31,7 +31,7 @@
           <span class='p-1 btn rounded hl-hover-gray' data-type='{{ Entity.type }}' data-id='{{ Entity.id }}' data-revid={{ revision.id }} data-toggle-plus-icon='1' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
             <i class='fas fa-square-plus fa-fw'></i>
           </span>
-          <span class='relative-moment' title='{{ revision.created_at }}'></span> {{ 'by'|trans }} {{ revision.fullname|raw }}
+          <span class='relative-moment' title='{{ revision.created_at }}'></span> {{ 'by'|trans }} {{ revision.fullname }}
         </div>
         <div class='ml-auto'>
           {% if not Entity.isReadOnly %}<button type='button' data-action='restore-revision' data-id='{{ Entity.id }}' data-type='{{ Entity.type }}' data-revid='{{ revision.id }}' class='btn hl-hover-gray'>{{ 'Restore'|trans }}</button>{% endif %}
