--- a/src/templates/show-view-edit.html
+++ b/src/templates/show-view-edit.html
@@ -23,7 +23,7 @@
             <option disabled>{{ 'Import in experiments'|trans }}</option>
             {# if we are admin we can import in other users experiments, otherwise just for ourself #}
             {% for user in usersArr|filter(u => App.Users.isAdmin ? true : u.userid == App.Users.userData.userid ? u) %}
-              <option value='experiments:{{ user.userid }}'>{{ user.fullname|raw }}</option>
+              <option value='experiments:{{ user.userid }}'>{{ user.fullname }}</option>
             {% endfor %}
           </select>
 
