--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -51,7 +51,7 @@
   {% if Entity.entityData.custom_id %}
     <span title='{{ 'Custom ID'|trans }}' class='custom-id-badge'>{{ Entity.entityData.custom_id }}</span>
   {% endif %}
-  <span id='documentTitle' class='breakable malleableColumn hl-hover-gray rounded py-1' data-target='title' data-endpoint='{{ Entity.type }}' data-id='{{ Entity.id }}'>{{ Entity.entityData.title|raw }}</span>
+  <span id='documentTitle' class='breakable malleableColumn hl-hover-gray rounded py-1' data-target='title' data-endpoint='{{ Entity.type }}' data-id='{{ Entity.id }}'>{{ Entity.entityData.title }}</span>
   </h1>
 
   {% include('catstat-view.html') %}
@@ -88,7 +88,7 @@
       {% set nextStepsArr = next_step|split('|') %}
       {% set next = nextStepsArr|first %}
       <p>
-      <span class='next-step-text'>{{ 'Next step'|trans }}:</span> <span class='text-dark'>{{ next|raw }}</span>
+      <span class='next-step-text'>{{ 'Next step'|trans }}:</span> <span class='text-dark'>{{ next }}</span>
       </p>
   {% endif %}
 
@@ -146,7 +146,7 @@
         {% for comment in Entity.entityData.comments %}
           <div class='box'>
             <div class='comment-header text-muted p-2'>
-              {{ comment.fullname|raw }} {{ 'commented'|trans }}
+              {{ comment.fullname }} {{ 'commented'|trans }}
               <span title='{{ comment.created_at }}' class='relative-moment'></span>
               {% if comment.created_at != comment.modified_at %}
                 ({{ 'edited'|trans }} <span title='{{ comment.modified_at }}' class='relative-moment'></span>)
@@ -158,7 +158,7 @@
               {% endif %}
             </div>
             {# the comment itself is only editable by the owner #}
-            <p class='comment m-2 p-2 {{ comment.userid == Entity.Users.userData.userid ? "editable hl-hover" }}' data-id='{{ comment.id }}'>{{ comment.comment|raw }}</p>
+            <p class='comment m-2 p-2 {{ comment.userid == Entity.Users.userData.userid ? "editable hl-hover" }}' data-id='{{ comment.id }}'>{{ comment.comment }}</p>
           </div>
         {% endfor %}
 
