--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -40,7 +40,7 @@
     <div class='my-1'>
       {# timestamp icon #}
       {% if item.timestamped %}
-        <i style='color:#{{ item.category_color }}' class='far fa-calendar-check fa-fw'></i>
+        <i style='color:#{{ item.category_color|default('bdbdbd') }}' class='far fa-calendar-check fa-fw'></i>
       {% endif %}
       {# archived icon #}
       {% if item.state == constant('Elabftw\\Enums\\State::Archived').value %}
