Small UI/UX fixes (#4833)
- There are some tiny bugs in the UI/UX when editing comments and in the favtag menu.
  Comments could not be edited again without a page reload after they were edited because the event listener was lost. Similar for the favtag menu.
- Translate "Please wait…" everywhere.
- The ampersand (&) should be encoded (&amp;) in the HTML attribute context and brackets ([]) should be url-encoded (%5B%5D).

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -14,7 +14,7 @@
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
-      <div class='modal-body' data-wait='{{ 'Please wait…' }}'>
+      <div class='modal-body' data-wait='{{ 'Please wait…'|trans }}'>
         <label for='newTeamName'>{{ 'Name'|trans }}</label>
         <input type='text' placeholder='{{ 'Enter team name'|trans }}' id='newTeamName' class='form-control' aria-label='{{ 'Enter team name'|trans }}'>
       </div>
@@ -1018,14 +1018,14 @@
             <td>{{ log.body }}</td>
             <td>
               {%- if log.requester_userid != 0 -%}
-                <a class='p-1 rounded hl-hover-gray' href='?tab=3&q=&userid={{ log.requester_userid }}'>{{ log.requester_userid }}</a>
+                <a class='p-1 rounded hl-hover-gray' href='?tab=3&amp;q=&amp;userid={{ log.requester_userid }}'>{{ log.requester_userid }}</a>
               {%- else -%}
                 <span class='p-1'>&ndash;</span>
               {%- endif -%}
             </td>
             <td>
               {%- if log.target_userid != 0 -%}
-                <a class='p-1 rounded hl-hover-gray' href='?tab=3&q=&userid={{ log.target_userid }}'>{{ log.target_userid }}</a>
+                <a class='p-1 rounded hl-hover-gray' href='?tab=3&amp;q=&amp;userid={{ log.target_userid }}'>{{ log.target_userid }}</a>
               {%- else -%}
                 <span class='p-1'>&ndash;</span>
               {%- endif -%}
