--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -64,7 +64,7 @@
       </div>
       <span class='tags mathjax-ignore d-flex-inline flex-wrap'>
         {% for tag in Entity.Tags.readAll() %}
-        <a class='tag btn {{- tag.is_favorite ? ' favorite' }}' href='?mode=show&tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
+        <a class='tag btn {{- tag.is_favorite ? ' favorite' }}' href='?mode=show&amp;tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
         {% endfor %}
       </span>
     {% endif %}
@@ -76,7 +76,7 @@
   {# SHOW EVENTS #}
   {% if Entity.entityData.events_start %}<i class='far fa-calendar-alt'></i>
     {% for event in Entity.entityData.events_start|split('|') %}
-    <a href='team.php?item={{ Entity.id }}&start={{ event|url_encode }}'>
+    <a href='team.php?item={{ Entity.id }}&amp;start={{ event|url_encode }}'>
       <button type='button' class='m-1 btn btn-neutral relative-moment' title='{{ event|date('Y-m-d H:i:s') }}' aria-label='{{ event|date('Y-m-d H:i:s') }}'></button>
     </a>
     {% endfor %}
